# t4-api-tools

./: .gitignore  error.txt  error1.txt  error2.txt  error3.txt  error4.txt  error6.txt  error7.txt  errors.txt  errors5.txt  pom.xml
tools/Cpp/CPPDemo/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPPDemo.sln  CPPDemo.vcxproj  CPPDemo.vcxproj.filters  ChartTypes.h  ChartWidget.cpp  ChartWidget.h  Client.cpp  Client.h  ContractPickerDialog.cpp  ContractPickerDialog.h  ExpiryPickerDialog.cpp  ExpiryPickerDialog.h  MainWindow.cpp  MainWindow.h  README.md  config.sample.json  cppdemo.cpp  cppdemo.h  cppdemo.qrc  cppdemo.ui  main.cpp
tools/Cpp/CPPDemo/CPPDemo/x64/Debug/: CPPDemo.exe.recipe  CPPDemo.ilk  Client.nativecodeanalysis.sarif  Client.nativecodeanalysis.xml  CodeAnalysisResultManifest.txt  MainWindow.nativecodeanalysis.sarif  MainWindow.nativecodeanalysis.xml  account.pb.nativecodeanalysis.sarif  account.pb.nativecodeanalysis.xml  auth.pb.nativecodeanalysis.sarif  auth.pb.nativecodeanalysis.xml  cppdemo.nativecodeanalysis.sarif  cppdemo.nativecodeanalysis.xml  enums.pb.nativecodeanalysis.sarif  enums.pb.nativecodeanalysis.xml  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  market.pb.nativecodeanalysis.sarif  market.pb.nativecodeanalysis.xml  moc_Client.nativecodeanalysis.sarif  moc_Client.nativecodeanalysis.xml  orderrouting.pb.nativecodeanalysis.sarif  orderrouting.pb.nativecodeanalysis.xml  price.pb.nativecodeanalysis.sarif  price.pb.nativecodeanalysis.xml  service.pb.nativecodeanalysis.sarif  service.pb.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc143.idb
tools/Cpp/CPPDemo/CPPDemo/x64/Release/: CPPDemo.exe.recipe  CPPDemo.ipdb  CPPDemo.vcxproj.FileListAbsolute.txt
tools/Cpp/CPPDemo/t4/v1/: service.pb.h
tools/Cpp/CPPDemo/t4/v1/auth/: auth.pb.cc
tools/Cpp/CPPDemo/t4/v1/orderrouting/: orderrouting.pb.cc
tools/Cpp/CPPDemo/t4/v2/: service.pb.cc  service.pb.h
tools/Cpp/CPPDemo/t4/v2/account/: account.pb.cc  account.pb.h
tools/Cpp/CPPDemo/t4/v2/auth/: auth.pb.cc  auth.pb.h
tools/Cpp/CPPDemo/t4/v2/common/: enums.pb.cc  enums.pb.h  price.pb.cc  price.pb.h
tools/Cpp/CPPDemo/t4/v2/market/: market.pb.cc  market.pb.h
tools/Cpp/CPPDemo/t4/v2/orderrouting/: orderrouting.pb.cc  orderrouting.pb.h
tools/Cpp/t4-cpp-api/: CMakeLists.txt  README.md
tools/Cpp/t4-cpp-api/include/t4decoder/: big_int.hpp  byte_stream.hpp  chart_client.hpp  chart_data_state.hpp  chart_data_stream_reader.hpp  chart_data_stream_reader_aggr.hpp  chart_format.hpp  chart_format_aggr.hpp  decimal.hpp  encoding.hpp  enums.hpp  i_market_conversion.hpp  message_reader.hpp  n_date_time.hpp  payload.hpp  price.hpp  vpt.hpp
tools/Cpp/t4-cpp-api/smoke/: fetch_main.cpp  main.cpp
tools/Cpp/t4-cpp-api/src/: big_int.cpp  chart_client.cpp  chart_data_stream_reader.cpp  chart_data_stream_reader_aggr.cpp  chart_format.cpp  decimal.cpp  encoding.cpp  message_reader.cpp  n_date_time.cpp  payload.cpp  price.cpp
tools/Cpp/t4-cpp-api/tests/: check.hpp  test_aggr.cpp  test_domain.cpp  test_encoding.cpp  test_main.cpp  test_payload.cpp  test_reader.cpp
tools/Python/t4-Python-api/: .gitignore  README.md  TESTS.md  pyproject.toml
tools/Python/t4-Python-api/src/t4login/: __init__.py
tools/Python/t4-Python-api/src/t4login/client/: __init__.py  chart_client.py
tools/Python/t4-Python-api/src/t4login/connection/: __init__.py  counting_stream.py
tools/Python/t4-Python-api/src/t4login/datetime_/: __init__.py  n_date_time.py
tools/Python/t4-Python-api/src/t4login/definitions/: __init__.py  bid_offer.py  market_mode.py
tools/Python/t4-Python-api/src/t4login/message/: __init__.py  reader.py
tools/Python/t4-Python-api/src/t4login/util/: __init__.py  encoding.py
tools/Python/t4-Python-api/tests/: __init__.py
tools/Python/t4-Python-api/tests/client/: __init__.py  conftest.py  test_chart_client.py  test_chart_client_integration.py
tools/Python/t4-Python-api/tests/connection/: __init__.py  test_counting_stream.py
tools/Python/t4-Python-api/tests/datetime_/: __init__.py  test_n_date_time.py
tools/Python/t4-Python-api/tests/definitions/: __init__.py  test_bid_offer.py  test_market_mode.py
tools/Python/t4-Python-api/tests/definitions/chartdata/: __init__.py  csv_binary_comparison.py  csv_binary_helpers.py  test_chart_data_change.py  test_chart_data_state.py  test_chart_data_stream_reader.py  test_chart_data_stream_reader_aggr.py  test_chart_data_stream_reader_aggr_decode.py  test_chart_data_type.py  test_chart_format.py  test_chart_format_aggr.py
tools/Python/t4-Python-api/tests/definitions/priceconversion/: __init__.py  test_i_market_conversion.py  test_price.py  test_vpt.py
tools/Python/t4-Python-api/tests/fixtures/: __init__.py  generate_fixtures.py
tools/Python/t4-Python-api/tests/message/: __init__.py  test_reader.py
tools/Python/t4-Python-api/tests/util/: __init__.py  test_encoding.py
tools/QtCpp/QtDemo/: .gitignore  CMakeLists.txt  client.cpp  client.h  compile_protos.sh  main.cpp  mainwindow.cpp  mainwindow.h  protos.txt
tools/QtCpp/QtDemo/t4/v1/: service.pb.cc  service.pb.h
tools/QtCpp/QtDemo/t4/v1/account/: account.pb.cc  account.pb.h
tools/QtCpp/QtDemo/t4/v1/auth/: auth.pb.h
tools/Rust/RustDemo/: Cargo.toml  README.md  build.rs
tools/Rust/RustDemo/.cargo/: config.toml
tools/Rust/RustDemo/src/: app.rs  config.rs  main.rs  proto.rs  state.rs
tools/Rust/RustDemo/src/net/: mod.rs  rest.rs
tools/Rust/t4-Rust-api/: Cargo.toml  README.md
tools/Rust/t4-Rust-api/examples/: smoke.rs
tools/Rust/t4-Rust-api/src/: big_int.rs  byte_stream.rs  chart_data_state.rs  chart_format.rs  chart_format_aggr.rs  client.rs  decimal.rs  encoding.rs  enums.rs  error.rs  lib.rs  market.rs  message_reader.rs  n_date_time.rs  payload.rs  price.rs  reader_aggr.rs  reader_tick.rs  vpt.rs
tools/Rust/t4-Rust-api/tests/: encoding.rs  numeric.rs  parity.rs  reader.rs
tools/Rust/t4-Rust-api/tests/fixtures/: sample_expected.csv
tools/rust/rust_demo/: .gitignore  Cargo.toml  build.rs
tools/rust/rust_demo/src/: client.rs  clientMessageHelper.rs  gui.rs  main.rs
(+434 files in other folders)
