[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t4login"
version = "0.0.1"
description = "Python port of the t4login Java API (chartdata + supporting modules)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "CTS" }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/t4login"]

[tool.hatch.build.targets.wheel.force-include]
"src/t4login/py.typed" = "t4login/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
markers = [
    "integration: live API tests (require --token or T4_API_TOKEN env var)",
]
