[package]
name = "rust_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# egui UI
eframe = "0.28"
egui = "0.28"
# Async runtime
tokio = { version = "1", features = ["full"] }

# REST API
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# WebSockets
tokio-tungstenite = "0.21"

# Serialization 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

prost = "0.12"           # Protobuf encoding/decoding
prost-types = "0.12"     # Common well-known types
walkdir = "2.5.0"

[build-dependencies]
prost-build = "0.12"     # Code generator for Rust from proto
walkdir = "2.5"